#pragma once
#include <cstdint>

enum class ETurnFlow : uint8_t
{
    Clockwise,
    Counterclockwise
};