#pragma once
#include <cstdint>

enum class ETurnResult : uint8_t
{
    Running,
    Ended
};
